--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "engines": {
-    "node":"14.x"
+    "node": "14.x"
   },
   "scripts": {
     "build": "tsc",
-    "dev": "node index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "vercel-build":"echo hello"
   },
   "author": "",
   "license": "ISC",
@@ -24,7 +25,10 @@
   },
   "devDependencies": {
     "@tsconfig/node-lts-strictest-esm": "^18.12.1",
+    "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.0",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
